# project_gen

./: pyproject.toml
project_gen/: main.py
project_gen/scripts_to_generate_project/: download.py  generate.py  handle_dirs.py  utils.py
project_gen/templates/project/: cookiecutter.json  testproject.toml
project_gen/templates/project/hooks/: post_gen_project.py
project_gen/templates/project/{{cookiecutter.project_name}}/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  bot.py  mypy.ini  pyproject.toml  requirements.txt  swagger-coverage-config-{{cookiecutter.project_slug}}.json  telegram-notifier-config.ini
project_gen/templates/project/{{cookiecutter.project_name}}/checkers/: http_checkers.py
project_gen/templates/project/{{cookiecutter.project_name}}/config/: stg.yaml
project_gen/templates/project/{{cookiecutter.project_name}}/utils/: generate_randoms.py
project_gen/templates/python/: configuration.mustache  rest.mustache  setup.mustache
project_gen/templates/python/asyncio/: rest.mustache
