[project]
name = "project-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "YuliaKolp",email = "expoliem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter (>=2.6.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
