[tool.poetry]
name = "project-gen"
version = "0.1.0"
description = ""
authors = ["YuliaKolp <expoliem@gmail.com>"]


readme = "README.md"
packages = [{include = "project_gen"}]

[tool.poetry.dependencies]
python = ">=3.13"
cookiecutter = ">=2.6.0,<3.0.0"
requests = ">=2.32.5,<3.0.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project_gen = "project_gen.main:cli"


